--- a/assets/styles/pages/_projects.scss
+++ b/assets/styles/pages/_projects.scss
@@ -7,9 +7,9 @@
 // Filter block
 .top-section-header {
   .filter-links {
-    padding: beat(1) 0;
+    padding: beat(1) 0 60px;
   }
-  @include media-md {
+  @include media-nav {
     .filter-links {
       padding: beat(1) 0 beat(4);
     }
